fix: nascondi scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,21 +60,14 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
+  width: 0px;
+  height: 0px;
+  display: none;
 }
 
-::-webkit-scrollbar-track {
-  background: var(--background);
-}
-
-::-webkit-scrollbar-thumb {
-  background: #333;
-  border-radius: 4px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #444;
+* {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 @keyframes fadeIn {
